// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayRows renders Feb 2016 correctly 1`] = `
Array [
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/1"
            onClick={[Function]}
        >
            <div>
                1
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/2"
            onClick={[Function]}
        >
            <div>
                2
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/3"
            onClick={[Function]}
        >
            <div>
                3
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/4"
            onClick={[Function]}
        >
            <div>
                4
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/5"
            onClick={[Function]}
        >
            <div>
                5
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/6"
            onClick={[Function]}
        >
            <div>
                6
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/7"
            onClick={[Function]}
        >
            <div>
                7
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/8"
            onClick={[Function]}
        >
            <div>
                8
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/9"
            onClick={[Function]}
        >
            <div>
                9
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/10"
            onClick={[Function]}
        >
            <div>
                10
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/11"
            onClick={[Function]}
        >
            <div>
                11
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/12"
            onClick={[Function]}
        >
            <div>
                12
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/13"
            onClick={[Function]}
        >
            <div>
                13
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/14"
            onClick={[Function]}
        >
            <div>
                14
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/15"
            onClick={[Function]}
        >
            <div>
                15
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/16"
            onClick={[Function]}
        >
            <div>
                16
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/17"
            onClick={[Function]}
        >
            <div>
                17
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/18"
            onClick={[Function]}
        >
            <div>
                18
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/19"
            onClick={[Function]}
        >
            <div>
                19
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/20"
            onClick={[Function]}
        >
            <div>
                20
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/21"
            onClick={[Function]}
        >
            <div>
                21
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/22"
            onClick={[Function]}
        >
            <div>
                22
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/23"
            onClick={[Function]}
        >
            <div>
                23
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/24"
            onClick={[Function]}
        >
            <div>
                24
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/25"
            onClick={[Function]}
        >
            <div>
                25
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/26"
            onClick={[Function]}
        >
            <div>
                26
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/27"
            onClick={[Function]}
        >
            <div>
                27
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/28"
            onClick={[Function]}
        >
            <div>
                28
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/2/29"
            onClick={[Function]}
        >
            <div>
                29
            </div>
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/2/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/2/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/2/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/2/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/2/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/2/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
</div>,
  <div
    className="row"
/>,
]
`;

exports[`DayRows renders Oct 2017 correctly 1`] = `
Array [
  <div
    className="row"
>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/1"
            onClick={[Function]}
        >
            <div>
                1
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/2"
            onClick={[Function]}
        >
            <div>
                2
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/3"
            onClick={[Function]}
        >
            <div>
                3
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/4"
            onClick={[Function]}
        >
            <div>
                4
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/5"
            onClick={[Function]}
        >
            <div>
                5
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/6"
            onClick={[Function]}
        >
            <div>
                6
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/7"
            onClick={[Function]}
        >
            <div>
                7
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/8"
            onClick={[Function]}
        >
            <div>
                8
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/9"
            onClick={[Function]}
        >
            <div>
                9
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/10"
            onClick={[Function]}
        >
            <div>
                10
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/11"
            onClick={[Function]}
        >
            <div>
                11
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/12"
            onClick={[Function]}
        >
            <div>
                12
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/13"
            onClick={[Function]}
        >
            <div>
                13
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/14"
            onClick={[Function]}
        >
            <div>
                14
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/15"
            onClick={[Function]}
        >
            <div>
                15
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/16"
            onClick={[Function]}
        >
            <div>
                16
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/17"
            onClick={[Function]}
        >
            <div>
                17
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/18"
            onClick={[Function]}
        >
            <div>
                18
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/19"
            onClick={[Function]}
        >
            <div>
                19
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/20"
            onClick={[Function]}
        >
            <div>
                20
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/21"
            onClick={[Function]}
        >
            <div>
                21
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/22"
            onClick={[Function]}
        >
            <div>
                22
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/23"
            onClick={[Function]}
        >
            <div>
                23
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/24"
            onClick={[Function]}
        >
            <div>
                24
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/25"
            onClick={[Function]}
        >
            <div>
                25
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/26"
            onClick={[Function]}
        >
            <div>
                26
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/27"
            onClick={[Function]}
        >
            <div>
                27
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/28"
            onClick={[Function]}
        >
            <div>
                28
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/29"
            onClick={[Function]}
        >
            <div>
                29
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/30"
            onClick={[Function]}
        >
            <div>
                30
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/10/31"
            onClick={[Function]}
        >
            <div>
                31
            </div>
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/10/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
</div>,
]
`;

exports[`generateRows renders the day rows from a chunked array 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/1"
        onClick={[Function]}
      >
        <div>
          1
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/10/2"
        onClick={[Function]}
      >
        <div>
          2
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/3"
        onClick={[Function]}
      >
        <div>
          3
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/4"
        onClick={[Function]}
      >
        <div>
          4
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/5"
        onClick={[Function]}
      >
        <div>
          5
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/6"
        onClick={[Function]}
      >
        <div>
          6
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/7"
        onClick={[Function]}
      >
        <div>
          7
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/8"
        onClick={[Function]}
      >
        <div>
          8
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/10/9"
        onClick={[Function]}
      >
        <div>
          9
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/10"
        onClick={[Function]}
      >
        <div>
          10
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/11"
        onClick={[Function]}
      >
        <div>
          11
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/12"
        onClick={[Function]}
      >
        <div>
          12
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/13"
        onClick={[Function]}
      >
        <div>
          13
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/14"
        onClick={[Function]}
      >
        <div>
          14
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/15"
        onClick={[Function]}
      >
        <div>
          15
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/10/16"
        onClick={[Function]}
      >
        <div>
          16
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/17"
        onClick={[Function]}
      >
        <div>
          17
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/18"
        onClick={[Function]}
      >
        <div>
          18
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/19"
        onClick={[Function]}
      >
        <div>
          19
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/20"
        onClick={[Function]}
      >
        <div>
          20
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/21"
        onClick={[Function]}
      >
        <div>
          21
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/22"
        onClick={[Function]}
      >
        <div>
          22
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/10/23"
        onClick={[Function]}
      >
        <div>
          23
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/24"
        onClick={[Function]}
      >
        <div>
          24
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/25"
        onClick={[Function]}
      >
        <div>
          25
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/26"
        onClick={[Function]}
      >
        <div>
          26
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/27"
        onClick={[Function]}
      >
        <div>
          27
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/28"
        onClick={[Function]}
      >
        <div>
          28
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/29"
        onClick={[Function]}
      >
        <div>
          29
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/10/30"
        onClick={[Function]}
      >
        <div>
          30
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/10/31"
        onClick={[Function]}
      >
        <div>
          31
        </div>
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/10/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
  </div>
</div>
`;
